@@ -75,6 +75,7 @@
         --with-sqlite=external \
         --with-beecrypt=external \
         --with-neon=external \
+        --with-xar=internal \
         --with-bzip2=external \
         --with-popt=external \
         --with-keyutils=external \
