@@ -1,17 +1,18 @@
 LIBRPMMISC_0
 {
   global:
-    fnmatch;
-    glob;
-    globfree;
-    rpmz_*;
-    lua*;
     db_env_create_rpmdb;
     db_env_set_func_open_rpmdb;
     db_env_set_func_fsync_rpmdb;
     db_strerror_rpmdb;
     db_create_rpmdb;
+    fnmatch;
+    glob;
+    globfree;
+    lua*;
     magic_*;
+    rpmz_*;
+    xar_*;
   local:
     file_*;
     db_*;
